# taxi-squad-tracker

./: .gitignore  .pre-commit-config.yaml  README.md  generate_config.py  pyproject.toml
scripts/: run_tests.sh
src/taxi_squad_tracker/: __init__.py  config.py  config_loader.py  league_loader.py  league_utils.py  main.py  smtp.py  taxi_squad_tracker.py
