[project]
name = "taxi-squad-tracker"
version = "0.1.0"
description = ""
authors = [
    {name = "Nathaniel Rodriguez"}
]
license = {text = "GNU GPL v3"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "espn-api (>=0.45.1,<0.46.0)"
]

[tool.poetry]
name = "taxi-squad-tracker"
version = "0.1.0"
description = ""
authors = ["Nathaniel Rodriguez"]
package-mode = false


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^6.2.1"
black = "^25.1.0"
ruff = "^0.12.12"
mypy = "^1.17.1"
pre-commit = "^4.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
