[project]
name = "taxi_squad_tracker"
version = "0.1.0"
description = ""
authors = [
    {name = "Nathaniel Rodriguez"}
]
license = {text = "GNU GPL v3"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "espn-api (>=0.45.1,<0.46.0)",
    "pyyaml (>=6.0.2,<7.0.0)"
]

[tool.poetry]
name = "taxi=_squad_tracker"
version = "0.1.0"
description = ""
authors = ["Nathaniel Rodriguez"]
packages = [{ include = "taxi_squad_tracker", from = "src" }]

[tool.poetry.scripts]
track = "taxi_squad_tracker.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^6.2.1"
ruff = "^0.12.12"
mypy = "^1.17.1"
pre-commit = "^4.3.0"
types-pyyaml = "^6.0.12.20250822"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
